# TabPortal

./: .env  .gitignore  Cargo.toml  app.py  requirements.txt
.github/workflows/: deploy.yml
migrations/: 20230630_init.sql  20231104_unique-name.sql
src/: api.rs  db.rs  main.rs
static/: alphaTab.css  alphaTab.js  tabEditor.js  tabPortal.css
tabs/: Dreamcatcher - And there was no one left.atx  Dreamcatcher - BEcause.atx  Dreamcatcher - BOCA.atx  Dreamcatcher - Black Or White.atx  Dreamcatcher - Chase Me.atx  Dreamcatcher - Deja Vu.atx  Dreamcatcher - Emotion.atx  Dreamcatcher - GOOD NIGHT.atx  Dreamcatcher - July 7th.atx  Dreamcatcher - New days.atx  Dreamcatcher - Odd Eye.atx  Dreamcatcher - PIRI.atx  Dreamcatcher - Scream.atx  Dreamcatcher - Starlight.atx  Dreamcatcher - YOU AND I.atx  Fox Stevenson - Get Through.atx  Fox Stevenson - Just Don't Mind.atx
templates/: editor-menu.html.jinja2  editor.html.jinja2  index.html.jinja2  menu.html.jinja2  tabeditor.html  tabeditor.jinja  tabexplorer.html  tabexplorer.jinja  tabportal.html  tabportal.jinja  tabviewer.html  tabviewer.jinja
