[package]
name = "tab-portal"
version = "1.0.5"
edition = "2021"
publish = false

[dependencies]
askama = "0.12.1"
axum = "0.7.4"
sanitize-filename = "0.5.0"
serde = "1.0.190"
shuttle-axum = "0.37.0"
shuttle-runtime = "0.37.0"
shuttle-secrets = "0.37.0"
shuttle-shared-db = { version = "0.37.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
tower-http = { version = "0.5.1", features = ["fs"] }
tower-livereload = "0.9.1"
ulid = { version = "1.1.0", features = ["serde", "uuid"] }
zip = "0.6.6"
