[package]
name = "tab-portal"
version = "1.0.5"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.3"
sanitize-filename = "0.6.0"
serde = "1.0.190"
shuttle-axum = { version = "0.51.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.51.0"
shuttle-shared-db = { version = "0.51.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tower-livereload = "0.9.4"
ulid = { version = "1.1.0", features = ["serde", "uuid"] }
zip = "2.2.0"
